--- a/gmall-realtime-self/pom.xml
+++ b/gmall-realtime-self/pom.xml
@@ -90,17 +90,43 @@
         </dependency>
 
 
+
+
         <dependency>
-            <groupId>org.apache.phoenix</groupId>
-            <artifactId>phoenix-spark</artifactId>
-            <version>5.0.0-HBase-2.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.glassfish</groupId>
-                    <artifactId>javax.el</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-jdbc_${scala.version}</artifactId>
+            <version>${flink.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+
+
+        <!-- 如果不引入 flink-table 相关依赖，则会报错：
+        Caused by: java.lang.ClassNotFoundException:
+        org.apache.flink.connector.base.source.reader.RecordEmitter
+        引入以下依赖可以解决这个问题（引入某些其它的 flink-table相关依赖也可）
+        -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-api-java-bridge_2.12</artifactId>
+            <version>1.13.6</version>
+        </dependency>
+
+<!--        为了提升效率，减少频繁创建销毁连接带来的性能损耗，创建连接池。
+        （1）添加德鲁伊连接池依赖-->
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.16</version>
+        </dependency>
+
+
 
 
 
