--- a/gmall-realtime-self/pom.xml
+++ b/gmall-realtime-self/pom.xml
@@ -125,9 +125,11 @@
             <artifactId>druid</artifactId>
             <version>1.1.16</version>
         </dependency>
-
-
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
 
 
     </dependencies>
